--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stich-app-1",
+  "name": "istitch-githubconnected",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -21,7 +21,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "5.3.0",
-    "swiper": "6.7.5",
+    "swiper": "6.7.0",
     "vscode-html-languageservice": "4.0.7",
     "vscode-languageserver-types": "3.16.0"
   },
