--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
+    "react-top-loading-bar": "2.0.1",
     "styled-components": "5.3.0",
-    "swiper": "6.7.0",
+    "swiper": "6.7.1",
     "vscode-html-languageservice": "4.0.7",
     "vscode-languageserver-types": "3.16.0"
   },
