--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@firebase/functions": "0.6.13",
     "@material-ui/core": "4.11.4",
     "@material-ui/lab": "4.0.0-alpha.58",
     "bootstrap": "5.0.2",
