--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@babel/runtime": "7.14.6",
     "@firebase/functions": "0.6.13",
     "@material-ui/core": "4.11.4",
     "@material-ui/lab": "4.0.0-alpha.58",
@@ -23,7 +24,7 @@
     "react-scripts": "4.0.0",
     "react-top-loading-bar": "2.0.1",
     "styled-components": "5.3.0",
-    "swiper": "6.7.1",
+    "swiper": "6.7.5",
     "vscode-html-languageservice": "4.0.7",
     "vscode-languageserver-types": "3.16.0"
   },
