--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-bootstrap": "1.6.1",
     "react-dom": "17.0.2",
     "react-idle-timer": "4.6.4",
+    "react-loader-spinner": "4.0.0",
+    "react-loading-skeleton": "2.2.0",
     "react-lottie": "1.2.3",
     "react-otp-input": "2.4.0",
     "react-router": "5.2.0",
