--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/lab": "4.0.0-alpha.58",
     "bootstrap": "5.0.2",
+    "bootstrap4-toggle": "3.6.1",
     "firebase": "8.6.8",
     "jquery": "3.6.0",
     "qs": "6.10.1",
