--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
     "react-top-loading-bar": "2.0.1",
+    "react.paginate": "0.0.6",
     "styled-components": "5.3.0",
     "swiper": "6.7.5",
     "vscode-html-languageservice": "4.0.7",
